# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  Dockerfile  README.md  bcn_aliases.sh  build.sh  docker-compose.bcn.yml  docker-compose.yml  docker.md  manual_dependencies.md  pyproject.toml  run_app.sh  test_az_keyvault.py
.github/workflows/: build.yml  e2e_tests.yml  on-PR-new-method.yml  on-PR.yml  on-commit-old.yml  on-commit.yml  pipeline.yml  style.yml  test.yml
e2e_tests/: test_e2e.py  test_loading_board.py  test_ticket_creation.py
tests/: base_json_response.json  conftest.py  test_Item.py  test_trello_items.py
tests/integration/: test_app.py  test_trelloAPI.py
tests/unit/: test_Item.py  test_ViewModel.py  test_trello_items.py
todo_app/: app.py  flask_config.py
todo_app/data/: Item.py  ViewModel.py  trello_interface.py  trello_items.py
todo_app/templates/: index.html
