[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.14.0"
requests = "^2.28.2"
azure-keyvault-secrets = "^4.1.0b1"
azure-identity = "^1.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-selenium = "^4.0.1"
pycodestyle = "^2.10.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
